# deep-learning-course-spring2026

./: pyproject.toml
project/: Projects.ipynb
sessions/session_1/: Exercises_1.ipynb  Session_1.ipynb
sessions/session_2/: Exercises_2.ipynb  Session_2.ipynb
