[project]
name = "deep-learning-course-sprint2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "matminer>=0.10.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
